# jimp

./: .travis.yml  README.md
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt
lab11/factorymethod/: CMakeLists.txt  FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/sum/: CMakeLists.txt  Sum.cpp  Sum.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: AcademiaTeacherHash.cpp  AcademiaTeacherHash.h  CMakeLists.txt  TeacherHash.cpp  TeacherHash.h
lab12/sequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: CMakeLists.txt  SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/geometry/: CMakeLists.txt  Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/modelnames/: CMakeLists.txt  Name.cpp  Name.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/friends/: CMakeLists.txt  Friends.cpp  Friends.h  main.cpp
lab5/memorychunk/: main.cpp  (+3 more)
lab6/studentrepository/: CMakeLists.txt  StudentRepository.cpp  StudentRepository.h  main.cpp
lab7/: CMakeLists.txt
lab8/: CMakeLists.txt
(+47 files in other folders)
